--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Getlinked</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <section class="contanier">
+
+        <nav>
+            <div class="logo-menu">
+                <div class="logo">
+                    <h1>get<span>linked</span></h1>
+                </div>
+                <div class="menus">
+                    <button id="menu" class="menu2"><img src="./assets/images/Vector.png" alt=""></button>
+                </div>
+            </div>
+
+            <div class="ul-btn">
+                <ul>
+                    <div class="menus">
+                        <button class="close" style="display: none;">X</button>
+                    </div>
+                    <li><a href="#"></a>Timeline</li>
+                    <li><a href="#"></a>Overview</li>
+                    <li><a href="#"></a>FAQs</li>
+                    <li><a href="#"></a>Contact</li>
+                </ul>
+
+                <div class="register">
+                    <button>Register  </button>
+                </div>
+            </div>
+        </nav>
+
+    </section>
+
+    <script src="./assets/js/app.js"></script>
 </body>
 </html>
