--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Getlinked</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <script src="https://kit.fontawesome.com/5b702f1e5f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section class="contanier">
@@ -12,7 +14,7 @@
         <nav>
             <div class="logo-menu">
                 <div class="logo">
-                    <h1>get<span>linked</span></h1>
+                    <a href="./index.html">get<span>linked</span></a>
                 </div>
                 <div class="menus">
                     <button id="menu" class="menu2"><img src="./assets/images/Vector.png" alt=""></button>
@@ -24,14 +26,14 @@
                     <div class="menus">
                         <button class="close" style="display: none;">X</button>
                     </div>
-                    <li><a href="#"></a>Timeline</li>
-                    <li><a href="#"></a>Overview</li>
-                    <li><a href="#"></a>FAQs</li>
-                    <li><a href="#"></a>Contact</li>
+                    <li><a href="#">Timeline</a></li>
+                    <li><a href="#">Overview</a></li>
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
 
                 <div class="register">
-                    <button>Register  </button>
+                    <a href="#">Register</a>
                 </div>
             </div>
         </nav>
