--- a/index.html
+++ b/index.html
@@ -38,6 +38,50 @@
             </div>
         </nav>
 
+        <section class="hero">
+            <div class="moving">
+                <div class="writting">
+                    <marquee loop="-1" scrollamout="5" width="55%">Igniting a Revolution in HR Innovation</marquee>
+                </div>
+                <div class="curved-text">
+                    <div class="curved-line"></div>
+                </div>
+            </div>
+            <div class="hero-text-img">
+                <div class="text">
+                    <div class="tex-h1">
+                        <div class="creative">
+                            <img src="./assets/images/Creative 1.png" alt="">
+                        </div>
+                        <h1>getlinked Tech</h1>
+                        <h1>Hackathon <span>1.0</span><img src="./assets/images/chain-9365116-7621444.png" alt=""><img src="./assets/images/1f4a5.png" alt=""></h1>
+                    </div>
+                    <div class="text-p">
+                        <p>Participate in getlinked tech Hackathon 2023 stand 
+                            a chance to win a Big prize</p>
+                        
+                        <div class="register">
+                            <a href="#">Register</a>
+                        </div>
+                    </div>
+                    <div class="clock">
+                        <div class="clocks">
+                            <span id="hours">00</span>H
+                        </div>
+                        <div class="clocks">
+                            <span id="minutes">00</span>M
+                        </div>
+                        <div class="clocks">
+                            <span id="seconds">00</span>S
+                        </div>
+                    </div>
+                </div>
+                <div class="hero-img">
+                    <img src="./assets/images/man-wearing-smart-glasses-touching-virtual-screen 1.png" alt="">
+                </div>
+            </div>
+        </section>
+
     </section>
 
     <script src="./assets/js/app.js"></script>
