--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="creative">
                             <img src="./assets/images/Creative 1.png" alt="">
                         </div>
-                        <h1>getlinked Tech</h1>
+                        <h1 class="first-h1">getlinked Tech</h1>
                         <h1>Hackathon <span>1.0</span><img src="./assets/images/chain-9365116-7621444.png" alt=""><img src="./assets/images/1f4a5.png" alt=""></h1>
                     </div>
                     <div class="text-p">
@@ -81,7 +81,9 @@
                 </div>
             </div>
         </section>
-
+        <div class="clocks">
+            <span id="seconds">00</span>S
+        </div>
     </section>
 
     <script src="./assets/js/app.js"></script>
