--- a/index.html
+++ b/index.html
@@ -81,6 +81,37 @@
                 </div>
             </div>
         </section>
+
+        <section class="the-big-idea">
+            <div class="the-big">
+                <img src="./assets/images/The big idea.png " alt="">
+            </div>
+            <div class="idea">
+                <h1>Introduction to getlinked <span> tech Hackathon 1.0</span></h1>
+                <p>Our tech hackathon is a melting pot of visionaries, and its purpose is as
+                    clear as day: to shape the future. Whether you're a coding genius, a 
+                    design maverick, or a concept wizard, you'll have the chance to transform 
+                    your ideas into reality. Solving real-world problems, pushing the boundaries
+                    of technology, and creating solutions that can change the world,
+                    that's what we're all about!</p>
+            </div>
+        </section>
+
+        <section class="the-big-idea Rules-img">
+            <div class="idea">
+                <h1>Rules and <br> <span>Guidelines</span></h1>
+                <p>Our tech hackathon is a melting pot of visionaries, and its purpose is as
+                    clear as day: to shape the future. Whether you're a coding genius, a 
+                    design maverick, or a concept wizard, you'll have the chance to transform 
+                    your ideas into reality. Solving real-world problems, pushing the boundaries
+                    of technology, and creating solutions that can change the world,
+                    that's what we're all about!</p>
+            </div>
+            <div class="the-big">
+                <img src="./assets/images/7450159 1.png " alt="">
+            </div>
+        </section>
+
     </section>
 
     <script src="./assets/js/app.js"></script>
