--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         </nav>
 
         <section class="hero">
+            <div class="star">
+                <i class="fa-solid fa-star shining-star"></i>
+            </div>
             <div class="moving">
                 <div class="writting">
                     <marquee loop="-1" scrollamout="5" width="55%">Igniting a Revolution in HR Innovation</marquee>
@@ -52,6 +55,7 @@
                     <div class="tex-h1">
                         <div class="creative">
                             <img src="./assets/images/Creative 1.png" alt="">
+                            <i class="fa-solid fa-star shining-star"></i>
                         </div>
                         <h1 class="first-h1">getlinked Tech</h1>
                         <h1>Hackathon <span>1.0</span><img src="./assets/images/chain-9365116-7621444.png" alt=""><img src="./assets/images/1f4a5.png" alt=""></h1>
@@ -74,6 +78,7 @@
                         <div class="clocks">
                             <span id="seconds">00</span>S
                         </div>
+                        <i class="fa-solid fa-star shining-star"></i>
                     </div>
                 </div>
                 <div class="hero-img">
