--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <div class="get">
                 <h1>Get in touch</h1>
                 <h2>Contact<br>Information</h2>
-                <p><a href="">27,Alara Street<br>Yaba 100012<br>Lagos State</a></p>
+                <p><a href="https://www.google.com/maps?q=27+Alara+Street,+Yaba+Lagos+100012">27,Alara Street<br>Yaba 100012<br>Lagos State</a></p>
                 <p><a href="tel:07067981819">Call Us : 07067981819</a></p>
                 <p><a href="#">we are open from Monday-Friday<br>08:00am - 05:00pm</a></p>
                 <div class="social-links">
