--- a/index.html
+++ b/index.html
@@ -117,6 +117,78 @@
             </div>
         </section>
 
+        <section class="the-big-idea Judging">
+            <div class="the-big">
+                <img src="./assets/images/8046554 1.png " alt="">
+                <p class="bk-img"></p>
+            </div>
+            <div class="idea">
+                <h1>Judging Criteria <br><span>Key attributes</span></h1>
+                <p><span>Innovation and Creativity:</span> Evaluate the uniqueness and creativity of the
+                    solution. Consider whether it addresses a real-world problem in a novel 
+                    way or introduces innovative features.</p>
+
+                <p><span>Functionality:</span> Assess how well the solution works. Does it perform its 
+                    intended functions effectively and without major issues? Judges would
+                    consider the completeness and robustness of the solution.</p>
+
+                <p><span>Impact and Relevance:</span> Determine the potential impact of the solution 
+                    in the real world. Does it address a significant problem, and is it relevant 
+                    to the target audience? Judges would assess the potential social, 
+                    economic, or environmental benefits.</p>
+                
+                <p><span>Technical Complexity:</span> Evaluate the technical sophistication of the solution. 
+                    Judges would consider the complexity of the code, the use of advanced 
+                    technologies or algorithms, and the scalability of the solution.</p>
+
+                <p><span>Adherence to Hackathon Rules:</span> Judges will Ensure that the team adhered 
+                    to the rules and guidelines of the hackathon, including deadlines, use of 
+                    specific technologies or APIs, and any other competition-specific requirements.</p>
+                <div class="read-more">
+                    <button type=>Read More</button>
+                </div>
+            </div>
+        </section>
+
+
+        <footer>
+            <section class="footer-contanier">
+                <div class="logo-p">
+                    <a href="./index.html">get<span>linked</span></a>
+                    <p>Getlinked Tech Hackathon is a technology innovation program 
+                        established by a group of organizations with the aim of showcasing 
+                        young and talented individuals in the field of technology</p>
+                    <h6>Terms of Use <span>|</span> Privacy Policy</h6>
+                </div>
+                <div class="Useful-contacts">
+                    <div class="Useful">
+                        <h1>Useful Links</h1>
+                        <ul>
+                            <li><a href="#">Overview</a></li>
+                            <li><a href="#">Timeline</a></li>
+                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#">Register</a></li>
+                        </ul>
+                        <div class="user-socal">
+                            <h1>Follow us</h1>
+                            <div class="links ">
+                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contacts">
+                        <h1>Contact Us</h1>
+                        <p><a href="tel:07067981819">Call Us : 07067981819</a></p>
+                        <p><a href="https://www.google.com/maps?q=27+Alara+Street,+Yaba+Lagos+100012">27,Alara Street<br>Yaba 100012<br>Lagos State</a></p>
+                    </div>
+                </div>
+            </section>
+            <p class="ft-p">All rights reserved. © getlinked Ltd.</p>
+        </footer>
+
     </section>
 
     <script src="./assets/js/app.js"></script>
