--- a/index.html
+++ b/index.html
@@ -150,6 +150,177 @@
             </div>
         </section>
 
+        <section class="the-big-idea Frequently">
+            <div class="idea">
+                <h1>Frequently Ask <br> <span>Question</span></h1>
+                <p>We got answers to the questions that you might
+                    want to ask about getlinked Hackathon 1.0</p>
+                <div class="idea-col">
+                    <div class="col">
+                        <p>Can I work on a project I started before the hackathon?</p>
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                    <div class="col">
+                        <p>What happens if I need help during the hackathon?</p>
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                    <div class="col">
+                        <p>What happens if I don't have an idea for a project?</p>
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                    <div class="col">
+                        <p>Can I join a team or do I have to come with one?</p>
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                    <div class="col">
+                        <p>What happens after the hackathon ends</p>
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                    <div class="col">
+                        <p>Can I work on a project I started before the hackathon?</p>
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="the-big">
+                <img src="./assets/images/cwok_casual_21 1.png " alt="">
+            </div>
+        </section>
+
+        <!-- <section class="Timeline">
+            <div class="timeline-h1-p">
+                <h1>Timeline</h1>
+                <p>Here is the breakdown of the time we anticipate 
+                    using for the upcoming event.</p>
+            </div>
+            <div class="Timeline-details">
+                <div class="detail">
+                    <div class="row">
+                        <span class="m-t">Hackathon Announcement</span><br>
+                        <samp>The getlinked tech hackathon 1.0 is formally announced
+                              to the general public and teams begin to get ready to register</samp>
+                    </div>
+                    <div class="row row-hp">
+                        <h1></h1>
+                        <p>1</p>
+                    </div>
+                    <div class="row">
+                        <span class="row-p-l">November 18, 2023</span>
+                    </div>
+                </div>
+                <div class="detail">
+                    <div class="row">
+                        <span>November 18, 2023</span>
+                    </div>
+                    <div class="row row-hp">
+                        <h2></h2>
+                        <p>2</p>
+                    </div>
+                    <div class="row">
+                        <span class="row-p-l">Teams Registration begins</span><br>
+                        <samp class="row-p-l">Interested teams can now show their interest in the
+                            getlinked tech hackathon 1.0 2023 by proceeding to register</samp>
+                    </div>
+                </div>
+                <div class="detail">
+                    <div class="row">
+                        <span>Teams Registration ends</span><br>
+                        <samp>Interested Participants are no longer Allowed to
+                            register</samp>
+                    </div>
+                    <div class="row row-hp">
+                        <h3></h3>
+                        <p>3</p>
+                    </div>
+                    <div class="row">
+                        <span class="row-p-l">November</span>
+                    </div>
+                </div>
+                <div class="detail">
+                    <div class="row">
+                        <span>November 18, 2023</span>
+                    </div>
+                    <div class="row row-hp">
+                        <h4></h4>
+                        <p>4</p>
+                    </div>
+                    <div class="row">
+                        <span class="row-p-l">Announcement of the accepted teams
+                            and ideas</span>
+                        <samp class="row-p-l">All teams whom idea has been accepted into getlinked tech
+                            hackathon 1.0 2023 are formally announced</samp>
+                    </div>
+                </div>
+                <div class="detail">
+                    <div class="row">
+                        <span>Getlinked Hackathon 1.0 Offically Begins</span><br>
+                        <samp>Accepted teams can now proceed to build their
+                            ground breaking skill driven solutions</samp>
+                    </div>
+                    <div class="row row-hp">
+                        <h5></h5>
+                        <p>5</p>
+                    </div>
+                    <div class="row">
+                        <span class="row-p-l">November</span>
+                    </div>
+                </div>
+                <div class="detail">
+                    <div class="row">
+                        <span>November 18, 2023</span>
+                    </div>
+                    <div class="row row-hp">
+                        <h6></h6>
+                        <p>6</p>
+                    </div>
+                    <div class="row">
+                        <span class="row-p-l">Demo Day</span><br>
+                        <samp class="row-p-l">Teams get the opportunity to pitch their projects to judges.
+                            The winner of the hackathon will also be announced on
+                            this day</samp>
+                    </div>
+                </div>
+            </div>
+            
+        </section> -->
+
+        <section class="Prizes-Rewards">
+            <div class="the-big">
+                <div class="rew-h1-p" id="display-none">
+                    <h1>Prizes and  <br><span> Rewards</span></h1>
+                    <p>Highlight of the prizes or rewards of winners and 
+                        for participants
+                    </p>
+                </div>
+                <img src="./assets/images/9486889 1.png " alt="">
+            </div>
+            <div class="idea">
+                <div class="rew-h1-p">
+                    <h1>Prizes and  <br><span> Rewards</span></h1>
+                    <p>Highlight of the prizes or rewards of winners and 
+                        for participants
+                    </p>
+                </div>
+                <div class="rewards">
+                    <!-- <div class="col col1">
+                        <img src="./assets/images/silver_medal 1.png" alt="">
+                        <h1>2nd <br> <span>Runner</span></h1>
+                    </div>
+                    <div class="col col-img">
+                        <img src="./assets/images/gold_medal 1.png" alt="">
+                        <h1>1st <br> <span>Runner</span></h1>
+                        <h2>N400,000</h2>
+                    </div>
+                    <div class="col col2">
+                        <img src="./assets/images/bronze_medal 1.png" alt="">
+                        <h1>3rd <br> <span>Runner</span></h1>
+                        <h3>N150,000</h3>
+                    </div> -->
+
+                    <img src="./assets/images/Rewards.png" alt="">
+                </div>
+            </div>
+        </section>
 
         <footer>
             <section class="footer-contanier">
