--- a/index.html
+++ b/index.html
@@ -89,9 +89,11 @@
 
         <section class="the-big-idea">
             <div class="the-big">
+                <i class="fa-solid fa-star shining-star star-1"></i>
                 <img src="./assets/images/The big idea.png " alt="">
             </div>
             <div class="idea">
+                <i class="fa-solid fa-star shining-star star-2"></i>
                 <h1>Introduction to getlinked <span> tech Hackathon 1.0</span></h1>
                 <p>Our tech hackathon is a melting pot of visionaries, and its purpose is as
                     clear as day: to shape the future. Whether you're a coding genius, a 
@@ -104,6 +106,7 @@
 
         <section class="the-big-idea Rules-img">
             <div class="idea">
+                <i class="fa-solid fa-star shining-star star-1"></i>
                 <h1>Rules and <br> <span>Guidelines</span></h1>
                 <p>Our tech hackathon is a melting pot of visionaries, and its purpose is as
                     clear as day: to shape the future. Whether you're a coding genius, a 
@@ -111,6 +114,7 @@
                     your ideas into reality. Solving real-world problems, pushing the boundaries
                     of technology, and creating solutions that can change the world,
                     that's what we're all about!</p>
+                    <i class="fa-solid fa-star shining-star star-2"></i>
             </div>
             <div class="the-big">
                 <img src="./assets/images/7450159 1.png " alt="">
@@ -119,8 +123,11 @@
 
         <section class="the-big-idea Judging">
             <div class="the-big">
+                <i class="fa-solid fa-star shining-star star-1"></i>
                 <img src="./assets/images/8046554 1.png " alt="">
                 <p class="bk-img"></p>
+                <i class="fa-solid fa-star shining-star star-2"></i>
+                <i class="fa-solid fa-star shining-star star-3"></i>
             </div>
             <div class="idea">
                 <h1>Judging Criteria <br><span>Key attributes</span></h1>
@@ -152,6 +159,8 @@
 
         <section class="the-big-idea Frequently">
             <div class="idea">
+                <i class="fa-solid fa-question popping"></i>
+
                 <h1>Frequently Ask <br> <span>Question</span></h1>
                 <p>We got answers to the questions that you might
                     want to ask about getlinked Hackathon 1.0</p>
@@ -183,7 +192,12 @@
                 </div>
             </div>
             <div class="the-big">
-                <img src="./assets/images/cwok_casual_21 1.png " alt="">
+                <img class="freq-img" src="./assets/images/cwok_casual_21 1.png " alt="">
+                <div class="questions">
+                    <img class="questions-1 popping pop-vibrate" src="./assets/images/_ (1).png" alt="">
+                    <img class="questions-2 popping pop-vibrate" src="./assets/images/_.png" alt="">
+                    <img class="questions-1 popping pop-vibrate" src="./assets/images/_ (1).png" alt="">
+                </div>
             </div>
         </section>
 
