--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
             <div class="the-big">
                 <img class="freq-img" src="./assets/images/cwok_casual_21 1.png " alt="">
                 <div class="questions">
-                    <img class="questions-1 popping" src="./assets/images/_ (1).png" alt="">
-                    <img class="questions-2 popping" src="./assets/images/_.png" alt="">
-                    <img class="questions-1 popping" src="./assets/images/_ (1).png" alt="">
+                    <img class="questions-1 popping" src="../assets/images/_ (1).png" alt="">
+                    <img class="questions-2 popping" src="../assets/images/_.png" alt="">
+                    <img class="questions-1 popping" src="../assets/images/_ (1).png" alt="">
                 </div>
             </div>
         </section>
