--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                     <li><a href="#">Timeline</a></li>
                     <li><a href="#">Overview</a></li>
                     <li><a href="#">FAQs</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
+                    <li class="active"><a href="./contact.html">Contact</a></li>
                 </ul>
 
                 <div class="register">
