--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <section class="contanier">
 
+        <div class="nav-hero">
+            
         <nav>
             <div class="logo-menu">
                 <div class="logo">
@@ -39,12 +41,13 @@
         </nav>
 
         <section class="hero">
+            <div class="back"></div>
             <div class="star">
                 <i class="fa-solid fa-star shining-star"></i>
             </div>
             <div class="moving">
                 <div class="writting">
-                    <marquee loop="-1" scrollamout="5" width="55%">Igniting a Revolution in HR Innovation</marquee>
+                    <h1 class="typewriter">Igniting a Revolution in HR Innovation</h1>
                 </div>
                 <div class="curved-text">
                     <div class="curved-line"></div>
@@ -86,6 +89,7 @@
                 </div>
             </div>
         </section>
+        </div>
 
         <section class="the-big-idea">
             <div class="the-big">
@@ -194,9 +198,9 @@
             <div class="the-big">
                 <img class="freq-img" src="./assets/images/cwok_casual_21 1.png " alt="">
                 <div class="questions">
-                    <img class="questions-1 popping" src="../assets/images/_ (1).png" alt="">
-                    <img class="questions-2 popping" src="../assets/images/_.png" alt="">
-                    <img class="questions-1 popping" src="../assets/images/_ (1).png" alt="">
+                    <img class="questions-1 popping" src="./assets/images/_ (1).png" alt="">
+                    <img class="questions-2 popping" src="./assets/images/_.png" alt="">
+                    <img class="questions-1 popping" src="./assets/images/_ (1).png" alt="">
                 </div>
             </div>
         </section>
