--- a/index.html
+++ b/index.html
@@ -340,6 +340,35 @@
             </div>
         </section>
 
+        <section class="partners-section the-big-idea">
+            <div class="partner-h1-p">
+                <h2>Partners and Sponsors</h2>
+                <p>
+                  Certideal Hackathon 3.0 is honored to have the following major companies as its partners and sponsors.
+                </p>    
+            </div>
+            <div class="sponsors-grid">
+              <div class="sponsor">
+                <img src="./assets/images/Liberty company logo white colour.png" alt="Liberty Visuals GRID">
+              </div>
+              <div class="sponsor sponsor-2">
+                <img src="./assets/images/Liberty company logo white.png" alt="Liberty Pay">
+              </div>
+              <div class="sponsor">
+                <img src="./assets/images/Winwise logo White colour 1.png" alt="WinWise">
+              </div>
+              <div class="sponsor">
+                <img src="./assets/images/wisper logo white.png" alt="WhisperSMS">
+              </div>
+              <div class="sponsor sponsor-2">
+                <img src="./assets/images/Paybox.png" alt="PayBox">
+              </div>
+              <div class="sponsor sponsor-2">
+                <img src="./assets/images/Vizual Plus.png" alt="Vuzual Plus">
+              </div>
+            </div>
+          </section>
+
         <footer>
             <section class="footer-contanier">
                 <div class="logo-p">
